<resources>
    <string name="app_name">CodingApp</string>
    <string name="learn_to_code">LEARN TO CODE</string>
    <string name="java">Java</string>
    <string name="html5">HTML5</string>
    <string name="javascript">JavaScript</string>
    <string name="php">PHP</string>
    <string name="textview">TextView</string>
    <string name="submit">Submit</string>
    <string name="viewAll">View All Doubts</string>
    <string name="doubt_list">Doubt List</string>
    <string name="log_out">Log Out</string>
    <string name="joseph">Seunghwan Kim</string>
    <string name="abhishek">Abhishek Sharma</string>
    <string name="profile">Profile</string>
    <array name="languages">
        <item name="java">Java</item>
        <item name="html">HTML 5</item>
        <item name="javascript">JavaScript</item>
        <item name="php">PHP</item>
    </array>
    <string name="linkToAndroid">Rich Freeman: Android Course. This is a live recoding of the course of Mobile Development at Georgian College. This course covers all the important features and aspects required to become a proficient android developer.
        <a href="https://youtu.be/mEHu74YwYFg">https://youtu.be/mEHu74YwYFg</a></string>

    <string name="linkToAsp">Rich Freeman: ASP,NET Course. This is a live recoding of the course of ASP,NET at Georgian College. This course covers all the important features and aspects required to become a proficient .NET developer.
        <a href="https://youtu.be/1KC-cefnU1A">https://youtu.be/1KC-cefnU1A</a></string>


</resources>
