<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="info.learntocode.codingapp.MainActivity"
    >
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="320dp"
                android:background="@drawable/banner"
                android:gravity="center"
                android:text="@string/learn_to_code"
                android:textStyle="bold"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="@color/colorPrimary"
                android:textSize="46sp" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2"
                android:baselineAligned="false">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="160dp"
                    android:layout_margin="5dp"
                    android:orientation="vertical"
                    android:layout_weight="1"
                    android:background="@color/colorPrimaryDark"
                    android:id="@+id/javaLayout"
                    >

                    <ImageView
                        android:layout_width="45dp"
                        android:layout_height="70dp"
                        android:layout_gravity="center"
                        android:layout_marginTop="10dp"
                        android:src="@drawable/ic_java"
                        android:contentDescription="TODO" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:padding="10dp"
                        android:layout_marginTop="35dp"
                        android:background="@color/colorPrimary"
                        android:text="@string/java"
                        android:textStyle="bold"
                        android:textSize="20sp"
                        android:textAlignment="center"
                        android:textColor="#fff"
                        />

                    <Button
                        android:id="@+id/buttonJava"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:visibility="invisible" />

                </LinearLayout>
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="160dp"
                    android:layout_margin="5dp"
                    android:orientation="vertical"
                    android:layout_weight="1"
                    android:background="@color/colorPrimaryDark"
                    android:id="@+id/htmlLayout"
                    >

                    <ImageView
                        android:layout_width="45dp"
                        android:layout_height="70dp"
                        android:layout_gravity="center"
                        android:layout_marginTop="10dp"
                        android:src="@drawable/ic_html_5_logo"
                        android:contentDescription="TODO" />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:padding="10dp"
                        android:layout_marginTop="35dp"
                        android:background="@color/colorPrimary"
                        android:text="@string/html5"
                        android:textStyle="bold"
                        android:textSize="20sp"
                        android:textAlignment="center"
                        android:textColor="#fff"
                        />

                </LinearLayout>
            </LinearLayout>


            <!-- second row starts -->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2"
                android:baselineAligned="false">
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="160dp"
                    android:layout_margin="5dp"
                    android:orientation="vertical"
                    android:layout_weight="1"
                    android:background="@color/colorPrimaryDark"
                    android:id="@+id/javascriptLayout"
                    >

                    <ImageView
                        android:layout_width="45dp"
                        android:layout_height="70dp"
                        android:layout_gravity="center"
                        android:layout_marginTop="10dp"
                        android:src="@drawable/ic_js"
                        />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:padding="10dp"
                        android:layout_marginTop="35dp"
                        android:background="@color/colorPrimary"
                        android:text="@string/javascript"
                        android:textStyle="bold"
                        android:textSize="20sp"
                        android:textAlignment="center"
                        android:textColor="#fff"
                        />

                </LinearLayout>
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="160dp"
                    android:layout_margin="5dp"
                    android:orientation="vertical"
                    android:layout_weight="1"
                    android:background="@color/colorPrimaryDark"
                    android:id="@+id/phpLayout"
                    >

                    <ImageView
                        android:layout_width="45dp"
                        android:layout_height="70dp"
                        android:layout_gravity="center"
                        android:layout_marginTop="10dp"
                        android:src="@drawable/ic_php"
                        />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:padding="10dp"
                        android:layout_marginTop="35dp"
                        android:background="@color/colorPrimary"
                        android:text="@string/php"
                        android:textStyle="bold"
                        android:textSize="20sp"
                        android:textAlignment="center"
                        android:textColor="#fff"
                        />

                </LinearLayout>
            </LinearLayout>
            <!--end-->
        </LinearLayout>
    </ScrollView>




</LinearLayout>


